file org and minor changes

--- a/CSS/homeStyle.css
+++ b/CSS/homeStyle.css
@@ -5,7 +5,7 @@ body, html {
 }
 
 .title-area {
-    background-image: url(../cis-2336-assignment-1-kristiechen41/Media/wood.jpg);
+    background-image: url(../Images/wood.jpg);
     background-size: cover;
     background-position: center;
     text-align: center;
